Improve PluginManagerMock validation
- Add missing null checks
- Add missing argument checks
- Add missing plugin name validation