@@ -33,6 +33,8 @@ import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.plugin.java.JavaPluginLoader;
 import org.bukkit.plugin.java.JavaPluginUtils;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.UnknownNullability;
 
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -77,7 +79,7 @@ public class PluginManagerMock implements PluginManager
 	private File parentTemporaryDirectory;
 	private final Map<String, Permission> permissions = new HashMap<>();
 	private final Map<Permissible, Set<String>> permissionSubscriptions = new HashMap<>();
-	private final Map<Boolean, Map<Permissible, Boolean>> defaultPermissionSubscriptions = new HashMap<Boolean, Map<Permissible, Boolean>>();
+	private final Map<Boolean, Map<Permissible, Boolean>> defaultPermissionSubscriptions = new HashMap<>();
 	private final @NotNull Map<String, List<Listener>> listeners = new HashMap<>();
 
 	private final List<Class<?>> pluginConstructorTypes = Arrays.asList(JavaPluginLoader.class,
@@ -86,6 +88,7 @@ public class PluginManagerMock implements PluginManager
 	@SuppressWarnings("deprecation")
 	public PluginManagerMock(@NotNull ServerMock server)
 	{
+		Preconditions.checkNotNull(server, "Server cannot be null");
 		this.server = server;
 		loader = new JavaPluginLoader(this.server);
 	}
@@ -117,8 +120,10 @@ public class PluginManagerMock implements PluginManager
 	 * @param message   The message to display when no event conforms.
 	 * @param predicate The predicate to test against.
 	 */
-	public void assertEventFired(@NotNull String message, @NotNull Predicate<Event> predicate)
+	public void assertEventFired(@Nullable String message, @NotNull Predicate<Event> predicate)
 	{
+		Preconditions.checkNotNull(predicate, "Predicate cannot be null");
+
 		for (Event event : events)
 		{
 			if (predicate.test(event))
@@ -137,6 +142,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public void assertEventFired(@NotNull Predicate<Event> predicate)
 	{
+		Preconditions.checkNotNull(predicate, "Predicate cannot be null");
 		assertEventFired("Event assert failed", predicate);
 	}
 
@@ -148,8 +154,10 @@ public class PluginManagerMock implements PluginManager
 	 * @param eventClass The class type that the event should be an instance of.
 	 * @param predicate  The predicate to test the event against.
 	 */
-	public <T extends Event> void assertEventFired(String message, @NotNull Class<T> eventClass, @NotNull Predicate<T> predicate)
+	public <T extends Event> void assertEventFired(@Nullable String message, @NotNull Class<T> eventClass, @NotNull Predicate<T> predicate)
 	{
+		Preconditions.checkNotNull(eventClass, "Class cannot be null");
+
 		for (Event event : events)
 		{
 			if (eventClass.isInstance(event) && predicate.test(eventClass.cast(event)))
@@ -170,6 +178,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public <T extends Event> void assertEventFired(@NotNull Class<T> eventClass, @NotNull Predicate<T> predicate)
 	{
+		Preconditions.checkNotNull(eventClass, "Class cannot be null");
 		assertEventFired("No event of the correct class tested true", eventClass, predicate);
 	}
 
@@ -180,6 +189,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public void assertEventFired(@NotNull Class<? extends Event> eventClass)
 	{
+		Preconditions.checkNotNull(eventClass, "Class cannot be null");
 		assertEventFired("No event of that type has been fired", eventClass::isInstance);
 	}
 
@@ -190,6 +200,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public void assertEventNotFired(@NotNull Class<? extends Event> eventClass)
 	{
+		Preconditions.checkNotNull(eventClass, "Class cannot be null");
 		assertEventNotFired(eventClass, "An event of type " + eventClass.getSimpleName() + " has been fired when it shouldn't have been");
 	}
 
@@ -199,8 +210,9 @@ public class PluginManagerMock implements PluginManager
 	 * @param eventClass The class of the event to check for.
 	 * @param message    The message to print when failed.
 	 */
-	public void assertEventNotFired(@NotNull Class<? extends Event> eventClass, String message)
+	public void assertEventNotFired(@NotNull Class<? extends Event> eventClass, @Nullable String message)
 	{
+		Preconditions.checkNotNull(eventClass, "Class cannot be null");
 		for (Event event : this.events)
 		{
 			if (eventClass.isAssignableFrom(event.getClass()))
@@ -213,6 +225,7 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public Plugin getPlugin(@NotNull String name)
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		for (Plugin plugin : plugins)
 		{
 			if (name.equals(plugin.getName()))
@@ -249,10 +262,16 @@ public class PluginManagerMock implements PluginManager
 	 */
 	private boolean isConstructorCompatible(@NotNull Constructor<?> constructor, @NotNull Class<?> @NotNull [] types)
 	{
+		Preconditions.checkNotNull(constructor, "Constructor cannot be null");
+		Preconditions.checkNotNull(types, "Types cannot be null");
+
 		Class<?>[] parameters = constructor.getParameterTypes();
+		if (parameters.length < types.length)
+			return false;
 		for (int i = 0; i < types.length; i++)
 		{
 			Class<?> type = types[i];
+			Preconditions.checkNotNull(type, "Type cannot be null");
 			Class<?> parameter = parameters[i];
 			if (i < 4)
 			{
@@ -280,8 +299,10 @@ public class PluginManagerMock implements PluginManager
 	 */
 	@SuppressWarnings("unchecked")
 	private @NotNull Constructor<? extends JavaPlugin> getCompatibleConstructor(@NotNull Class<? extends JavaPlugin> class1,
-																				Class<?> @NotNull [] types) throws NoSuchMethodException
+																				@NotNull Class<?> @NotNull [] types) throws NoSuchMethodException
 	{
+		Preconditions.checkNotNull(class1, "Class cannot be null");
+		Preconditions.checkNotNull(types, "Types cannot be null");
 		for (Constructor<?> constructor : class1.getDeclaredConstructors())
 		{
 			Class<?>[] parameters = constructor.getParameterTypes();
@@ -318,6 +339,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public @NotNull File createTemporaryDirectory(@NotNull String name) throws IOException
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		File directory = new File(getParentTemporaryDirectory(), name);
 		directory.mkdirs();
 		return directory;
@@ -332,6 +354,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public @NotNull File createTemporaryPluginFile(@NotNull String name) throws IOException
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		File pluginFile = new File(getParentTemporaryDirectory(), name + ".jar");
 		if (!pluginFile.exists() && !pluginFile.createNewFile())
 		{
@@ -347,6 +370,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	public void registerLoadedPlugin(@NotNull Plugin plugin)
 	{
+		Preconditions.checkNotNull(plugin, "Plugin cannot be null");
 		addCommandsFrom(plugin);
 		plugins.add(plugin);
 		plugin.onLoad();
@@ -361,13 +385,29 @@ public class PluginManagerMock implements PluginManager
 	 * @return The loaded plugin.
 	 */
 	public @NotNull JavaPlugin loadPlugin(@NotNull Class<? extends JavaPlugin> class1, @NotNull PluginDescriptionFile description,
-										  Object @NotNull [] parameters)
+										  @NotNull Object @NotNull [] parameters)
 	{
+		Preconditions.checkNotNull(class1, "Class cannot be null");
+		Preconditions.checkNotNull(description, "Description cannot be null");
+		Preconditions.checkNotNull(parameters, "Parameters cannot be null");
+
+		String name = description.getName();
+		if (name.equalsIgnoreCase("bukkit") || name.equalsIgnoreCase("minecraft") || name.equalsIgnoreCase("mojang"))
+		{
+			throw new RuntimeException("Restricted Name");
+		}
+
+		if (name.contains(" "))
+		{
+			throw new RuntimeException("Name cannot contain spaces (0x20)");
+		}
+
 		try
 		{
 			List<Class<?>> types = new ArrayList<>(pluginConstructorTypes);
 			for (Object parameter : parameters)
 			{
+				Preconditions.checkNotNull(parameter, "Parameters cannot be null");
 				types.add(parameter.getClass());
 			}
 
@@ -377,8 +417,8 @@ public class PluginManagerMock implements PluginManager
 			Object[] arguments = new Object[types.size()];
 			arguments[0] = loader;
 			arguments[1] = description;
-			arguments[2] = createTemporaryDirectory(description.getName() + "-" + description.getVersion());
-			arguments[3] = createTemporaryPluginFile(description.getName() + "-" + description.getVersion());
+			arguments[2] = createTemporaryDirectory(name + "-" + description.getVersion());
+			arguments[3] = createTemporaryPluginFile(name + "-" + description.getVersion());
 			System.arraycopy(parameters, 0, arguments, 4, parameters.length);
 
 			JavaPlugin plugin = constructor.newInstance(arguments);
@@ -435,6 +475,7 @@ public class PluginManagerMock implements PluginManager
 	private @NotNull PluginDescriptionFile findPluginDescription(@NotNull Class<? extends JavaPlugin> class1)
 			throws IOException, InvalidDescriptionException
 	{
+		Preconditions.checkNotNull(class1, "Class cannot be null");
 		Enumeration<URL> resources = class1.getClassLoader().getResources("plugin.yml");
 		while (resources.hasMoreElements())
 		{
@@ -451,6 +492,7 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void callEvent(@NotNull Event event)
 	{
+		Preconditions.checkNotNull(event, "Event cannot be null");
 		if (event.isAsynchronous() && server.isOnMainThread())
 		{
 			throw new IllegalStateException("Asynchronous Events cannot be called on the main Thread.");
@@ -482,8 +524,9 @@ public class PluginManagerMock implements PluginManager
 	 * @param event The asynchronous {@link Event} to call.
 	 * @param func  A function to invoke after the event has been called.
 	 */
-	public <T extends Event> void callEventAsynchronously(@NotNull T event, Consumer<T> func)
+	public <T extends Event> void callEventAsynchronously(@NotNull T event, @Nullable Consumer<T> func)
 	{
+		Preconditions.checkNotNull(event, "Event cannot be null");
 		if (!event.isAsynchronous())
 		{
 			throw new IllegalStateException("Synchronous Events cannot be called asynchronously.");
@@ -495,6 +538,8 @@ public class PluginManagerMock implements PluginManager
 
 	private void callRegisteredListener(@NotNull RegisteredListener registration, @NotNull Event event)
 	{
+		Preconditions.checkNotNull(registration, "Listener cannot be null");
+		Preconditions.checkNotNull(event, "Event cannot be null");
 		if (!registration.getPlugin().isEnabled())
 		{
 			return;
@@ -503,7 +548,7 @@ public class PluginManagerMock implements PluginManager
 		{
 			registration.callEvent(event);
 		}
-		catch (Throwable ex)
+		catch (Exception ex)
 		{
 			if (!(event instanceof ServerExceptionEvent))
 			{ // Don't cause an endless loop
@@ -525,17 +570,12 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void enablePlugin(@NotNull Plugin plugin)
 	{
-		if (plugin instanceof JavaPlugin)
+		Preconditions.checkNotNull(plugin, "Plugin cannot be null");
+		Preconditions.checkArgument(plugin instanceof JavaPlugin, "Not a JavaPlugin");
+		if (!plugin.isEnabled())
 		{
-			if (!plugin.isEnabled())
-			{
-				JavaPluginUtils.setEnabled((JavaPlugin) plugin, true);
-				callEvent(new PluginEnableEvent(plugin));
-			}
-		}
-		else
-		{
-			throw new IllegalArgumentException("Not a JavaPlugin");
+			JavaPluginUtils.setEnabled((JavaPlugin) plugin, true);
+			callEvent(new PluginEnableEvent(plugin));
 		}
 	}
 
@@ -546,18 +586,22 @@ public class PluginManagerMock implements PluginManager
 	 * @param name    The name of the section, as read in a configuration file.
 	 * @param value   The value of the section, as parsed by {@link YamlConfiguration}
 	 */
-	private void addSection(@NotNull PluginCommand command, @NotNull String name, Object value)
+	private void addSection(@NotNull PluginCommand command, @NotNull String name, @UnknownNullability Object value)
 	{
+		Preconditions.checkNotNull(command, "Command cannot be null");
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		switch (name)
 		{
 		case "description":
+			Preconditions.checkNotNull(value, "Value cannot be null");
+			Preconditions.checkArgument(value instanceof String, "Not a String");
 			command.setDescription((String) value);
 			break;
 		case "aliases":
 			if (value instanceof List<?>)
 			{
 				command.setAliases(
-						((List<?>) value).stream().map(Object::toString).collect(Collectors.toList()));
+						((List<?>) value).stream().map(Object::toString).toList());
 			}
 			else if (value != null)
 			{
@@ -569,12 +613,16 @@ public class PluginManagerMock implements PluginManager
 			}
 			break;
 		case "permission":
-			command.setPermission((String) value);
+			Preconditions.checkArgument(value == null || value instanceof String, "Not a String");
+			command.setPermission(value == null ? null : (String) value);
 			break;
 		case "permission-message":
-			command.setPermissionMessage((String) value);
+			Preconditions.checkArgument(value == null || value instanceof String, "Not a String");
+			command.setPermissionMessage(value == null ? null : (String) value);
 			break;
 		case "usage":
+			Preconditions.checkNotNull(value, "Value cannot be null");
+			Preconditions.checkArgument(value instanceof String, "Not a String");
 			command.setUsage((String) value);
 			break;
 		default:
@@ -589,6 +637,7 @@ public class PluginManagerMock implements PluginManager
 	 */
 	protected void addCommandsFrom(@NotNull Plugin plugin)
 	{
+		Preconditions.checkNotNull(plugin, "Plugin cannot be null");
 		Map<String, Map<String, Object>> pluginCommands = plugin.getDescription().getCommands();
 		for (Entry<String, Map<String, Object>> entry : pluginCommands.entrySet())
 		{
@@ -612,6 +661,7 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public boolean isPluginEnabled(@NotNull String name)
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		boolean result = false;
 
 		for (Plugin mockedPlugin : plugins)
@@ -626,7 +676,7 @@ public class PluginManagerMock implements PluginManager
 	}
 
 	@Override
-	public boolean isPluginEnabled(@NotNull Plugin plugin)
+	public boolean isPluginEnabled(@Nullable Plugin plugin)
 	{
 		boolean result = false;
 
@@ -683,6 +733,8 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void registerEvents(@NotNull Listener listener, @NotNull Plugin plugin)
 	{
+		Preconditions.checkNotNull(listener, "Listener cannot be null");
+		Preconditions.checkNotNull(plugin, "Listener cannot be null");
 		if (!plugin.isEnabled())
 		{
 			throw new IllegalPluginAccessException("Plugin attempted to register " + listener + " while not enabled");
@@ -695,8 +747,10 @@ public class PluginManagerMock implements PluginManager
 
 	}
 
-	private void addListener(Listener listener, @NotNull Plugin plugin)
+	private void addListener(@NotNull Listener listener, @NotNull Plugin plugin)
 	{
+		Preconditions.checkNotNull(listener, "Listener cannot be null");
+		Preconditions.checkNotNull(plugin, "Listener cannot be null");
 		List<Listener> l = listeners.getOrDefault(plugin.getName(), new ArrayList<>());
 		if (!l.contains(listener))
 		{
@@ -707,6 +761,7 @@ public class PluginManagerMock implements PluginManager
 
 	public void unregisterPluginEvents(@NotNull Plugin plugin)
 	{
+		Preconditions.checkNotNull(plugin, "Listener cannot be null");
 		List<Listener> listListener = listeners.get(plugin.getName());
 		if (listListener != null)
 		{
@@ -747,6 +802,7 @@ public class PluginManagerMock implements PluginManager
 
 	private HandlerList getEventListeners(@NotNull Class<? extends Event> type)
 	{
+		Preconditions.checkNotNull(type, "Type cannot be null");
 		try
 		{
 			Method method = getRegistrationClass(type).getDeclaredMethod("getHandlerList");
@@ -761,6 +817,7 @@ public class PluginManagerMock implements PluginManager
 
 	private @NotNull Class<? extends Event> getRegistrationClass(@NotNull Class<? extends Event> clazz)
 	{
+		Preconditions.checkNotNull(clazz, "Class cannot be null");
 		try
 		{
 			clazz.getDeclaredMethod("getHandlerList");
@@ -784,6 +841,7 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void disablePlugin(@NotNull Plugin plugin)
 	{
+		Preconditions.checkNotNull(plugin, "Plugin cannot be null");
 		Preconditions.checkArgument(plugin instanceof JavaPlugin, "Not a JavaPlugin");
 		if (!plugin.isEnabled())
 			return;
@@ -809,24 +867,28 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public Permission getPermission(@NotNull String name)
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		return permissions.get(name.toLowerCase(Locale.ENGLISH));
 	}
 
 	@Override
 	public void addPermission(@NotNull Permission perm)
 	{
+		Preconditions.checkNotNull(perm, "Permission cannot be null");
 		permissions.put(perm.getName().toLowerCase(Locale.ENGLISH), perm);
 	}
 
 	@Override
 	public void removePermission(@NotNull Permission perm)
 	{
+		Preconditions.checkNotNull(perm, "Permission cannot be null");
 		permissions.remove(perm.getName().toLowerCase(Locale.ENGLISH));
 	}
 
 	@Override
 	public void removePermission(@NotNull String name)
 	{
+		Preconditions.checkNotNull(name, "Name cannot be null");
 		permissions.remove(name.toLowerCase(Locale.ENGLISH));
 	}
 
@@ -852,8 +914,9 @@ public class PluginManagerMock implements PluginManager
 	 * @return A {@link Set} of permissions the permissible is subscribed to. Is the {@link Permissible} isn't
 	 * subscribed to any, returns an empty set.
 	 */
-	private Set<String> getPermissionSubscriptions(Permissible permissible)
+	private Set<String> getPermissionSubscriptions(@NotNull Permissible permissible)
 	{
+		Preconditions.checkNotNull(permissible, "Permissible cannot be null");
 		if (permissionSubscriptions.containsKey(permissible))
 		{
 			return permissionSubscriptions.get(permissible);
@@ -869,18 +932,23 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void subscribeToPermission(@NotNull String permission, @NotNull Permissible permissible)
 	{
+		Preconditions.checkNotNull(permission, "Permission cannot be null");
+		Preconditions.checkNotNull(permissible, "Permissible cannot be null");
 		getPermissionSubscriptions(permissible).add(permission);
 	}
 
 	@Override
 	public void unsubscribeFromPermission(@NotNull String permission, @NotNull Permissible permissible)
 	{
+		Preconditions.checkNotNull(permission, "Permission cannot be null");
+		Preconditions.checkNotNull(permissible, "Permissible cannot be null");
 		getPermissionSubscriptions(permissible).remove(permission);
 	}
 
 	@Override
 	public @NotNull Set<Permissible> getPermissionSubscriptions(@NotNull String permission)
 	{
+		Preconditions.checkNotNull(permission, "Permission cannot be null");
 		Set<Permissible> subscriptions = new HashSet<>();
 		for (Entry<Permissible, Set<String>> entry : permissionSubscriptions.entrySet())
 		{
@@ -897,6 +965,7 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void subscribeToDefaultPerms(boolean op, @NotNull Permissible permissible)
 	{
+		Preconditions.checkNotNull(permissible, "Permissible cannot be null");
 		Map<Permissible, Boolean> map = this.defaultPermissionSubscriptions.computeIfAbsent(op, k -> new WeakHashMap<>());
 		map.put(permissible, true);
 	}
@@ -904,6 +973,7 @@ public class PluginManagerMock implements PluginManager
 	@Override
 	public void unsubscribeFromDefaultPerms(boolean op, @NotNull Permissible permissible)
 	{
+		Preconditions.checkNotNull(permissible, "Permissible cannot be null");
 		Map<Permissible, Boolean> map = this.defaultPermissionSubscriptions.get(op);
 
 		if (map == null)
